[tool.poetry]
name = "windy-parser"
version = "0.1.0"
description = ""
authors = ["Tetenkov Alexander <forthe@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pygrib = "^2.1.4"
black = "^23.9.1"
httpx = "^0.25.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
